@@ -1,5 +1,12 @@
 2010-01-07  H.J. Lu  <hongjiu.lu@intel.com>
 
+	PR ld/11133
+	* elflink.c (_bfd_elf_gc_mark_hook): Check section XXX for
+	undefined __start_XXX/__stop_XXX in all input files and set
+	SEC_KEEP.
+
+2010-01-07  H.J. Lu  <hongjiu.lu@intel.com>
+
 	PR ld/11143
 	* elflink.c (elf_gc_sweep): Keep SHT_NOTE section.
 
